compiler/testData/asJava/lightClasses/compilationErrors/TraitClassObjectField.fir.java
public abstract interface TraitClassObjectField /* TraitClassObjectField*/ {
  @org.jetbrains.annotations.NotNull()
  public static final TraitClassObjectField.Companion Companion;


public static final class Companion /* TraitClassObjectField.Companion*/ {
  @org.jetbrains.annotations.Nullable()
  private final java.lang.String y;

  private  Companion();//  .ctor()

}}
